Z-index fix for navbar and title

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -115,6 +115,7 @@ header {
   top: 0;
   left:0;
   right:0;
+  z-index: 101;
   }
 
 #brand {
